# fluffos_Z

./: .gitignore  README.md  README_EN.md  applies_table.autogen.cc  applies_table.autogen.h
compat/simuls/: parse_command.c
docs/.vitepress/: sidebar.ts
docs/audit/: 24xinduobao_hotpath_validation_2026_03_26.md  commit_review_115faae9_2026_03_28.md  commit_review_21f3946f_2026_03_28.md  commit_review_2e9dd2df_2026_03_28.md  commit_review_3a9f938b_2026_03_28.md  commit_review_3ab70ab2_2026_03_28.md  commit_review_3b531567_2026_03_28.md  commit_review_5495a02c_2026_03_28.md  commit_review_67331e79_2026_03_28.md  commit_review_95eab12e_2026_03_28.md  commit_review_a07b6446_2026_03_28.md  commit_review_a2bccf2f_2026_03_28.md  commit_review_a350d16c_2026_03_28.md  commit_review_aaf3a495_2026_03_28.md  commit_review_b32443d_2026_03_28.md  commit_review_dbe3f9ae_2026_03_28.md  commit_review_ed4a8a9d_2026_03_28.md  commit_review_f2ba0957_to_HEAD_2026_03_28.md  commit_review_fa54029b_2026_03_28.md  commit_review_fb259546_2026_03_28.md  driver_runtime_performance_audit_2026_03_26.md  driver_runtime_performance_execution_2026_03_26.md  driver_runtime_performance_summary_2026_03_27.md  fix_review_findings_2026_03_28.md  full_code_audit_2026_03_25.md  full_code_audit_2026_03_26_open_issues.md  lpc_runtime_hotpath_analysis_2026_03_26.md  performance_audit_2026_03_26.md  startup_trace_findings_2026_03_26.md  startup_tracing_2026_03_26.md
docs/driver/: gateway.md  index.md  maintenance_journal.md  uncommitted_review_2026_03_24.md
src/: CMakeLists.txt  backend.cc  backend.h  comm.cc  comm.h  config.h.in  interactive.h  main_generate_keywords.cc  main_json2o.cc  main_lpcc.cc  main_o2json.cc  main_symbol.cc  mainlib.cc  mainlib.h  user.cc  user.h
src/include/: runtime_config.h
src/net/: telnet.cc  (+3 more)
src/tests/: CMakeLists.txt  call_out_bench.cc  gametick_bench.cc  heartbeat_bench.cc  input_buffer_bench.cc  mud_input_bench.cc  test_lpc.cc  user_parser_bench.cc
testsuite/: applies_table.autogen.cc  applies_table.autogen.h
tmp_json2o_test/: input.json
(+63 files in other folders)
